2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Revert Rob's SYSTEM_PATH change.  Sorry about that.  The devs spent hours to finally get the PATH
	 stuff consistent and fixing the countless bugs that this process introduced. 
	 Maybe some links still need to use BASE_URL_PATH instead of BASE_SSL_PATH,
	(or vice-versa) but it was on purpose that SYSTEM_PATH was not made available to Smarty.  
	We already have 3 defines to be used for links and html refs, that's enough
	 BASE_SSL_PATH should be used to enter SSL mode (if available)
 	 BASE_NON_SSL_PATH should be used to break out of SSL mode of when we
 	 explicitely do not want someting to be referenced over http
 	 BASE_URL_PATH should be used in all other cases to avoid needless SSL warning
	
2006-04-17 Rob Janes <janes.rob@gmail.com>
	* javascript for validating and navigating forms.
	* help text (untranslated).
	* EVENT_LOGGING enabling/disabling flag.
	* use SYSTEM_PATH instead of BASE_URL_PATH and BASE_SSL_PATH where ever appropriate.
	* standardize Smarty variables for Network and User info by adding assignSmartyValues($smarty, $self) to Network and User.
	* change_password only allowed if logged in.
	* non-superadmin can only use change_password to change their own password.
	* superadmin can use change_password to change any user password by entering in their password for the old password.
	* page_header div defined and positioned in MainUI

2006-04-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* /classes/Content/IFrame/IFrame.php: Change a few methods from private to protected as the private methods broke IFrameRest

2006-04-01 François Proulx <francois.proulx@gmail.com>
	* Dumped initial schema from working install
	
2006-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* dump_initial_data_postgres.sh:  Add the content_available_display_pages table to the dump, can someone re-generate the initial data from a working install
	* Remove the ?> tags from all the classes.
